--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 boby { 
-    background-color: blueviolet;
+    background-color: yellow;
 }
  h1{
-    color: black;
+    color: white;
     font-size: 30px;
     text-align: center;
  }
