--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ boby {
     background-color: white;
 }
  h1{
-    color: lightcyan;
+    color: black;
     font-size: 30px;
     text-align: center;
  }
